--- a/todo/package.json
+++ b/todo/package.json
@@ -1,4 +1,3 @@
-  
 {
   "name": "demo-context-api",
   "version": "1.0.0",
@@ -6,13 +5,21 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
+    "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.14.1",
     "react": "16.13.1",
+    "react-bootstrap": "^1.6.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "16.13.1",
-    "react-jsonschema-form": "1.8.1",
-    "react-router-dom": "5.2.0",
+    "react-if": "^4.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "uuid": "8.1.0"
+    "superagent": "^6.1.0",
+    "uuid": "8.1.0",
+    "web-vitals": "^2.0.1"
   },
   "devDependencies": {},
   "scripts": {
